--- a/content/apps/main/languages/en_US/main.po
+++ b/content/apps/main/languages/en_US/main.po
@@ -8,7 +8,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2019-01-30 10:48+0800\n"
+"PO-Revision-Date: 2019-01-31 17:50+0800\n"
 "Language-Team: LANGUAGE <ecjia@ecjia.com>\n"
 "X-Generator: Poedit 2.2.1\n"
 "Last-Translator: \n"
@@ -53,7 +53,7 @@ msgstr "understand more \""
 
 #: classes/hooks/admin_main.class.php:126
 msgid "终身商业授权"
-msgstr "Lifetime commercial license"
+msgstr "Permanent authorization license"
 
 #: classes/hooks/admin_main.class.php:127
 msgid "授权域名："
