--- a/content/apps/affiliate/languages/zh_TW/affiliate.po
+++ b/content/apps/affiliate/languages/zh_TW/affiliate.po
@@ -2,593 +2,600 @@
 # This file is distributed under the same license as the Ecjia App affiliate package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Ecjia App affiliate 1.28.0\n"
+"Project-Id-Version: Ecjia App affiliate 1.27.4\n"
 "Report-Msgid-Bugs-To: https://make.ecjia.com/polyglots/\n"
-"POT-Creation-Date: 2019-03-13 05:24:21+00:00\n"
+"POT-Creation-Date: 2019-03-13 13:44+0800\n"
+"PO-Revision-Date: 2019-03-13 13:45+0800\n"
+"Last-Translator: \n"
+"Language-Team: LANGUAGE <ecjia@ecjia.com>\n"
+"Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2019-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <ecjia@ecjia.com>\n"
+"X-Generator: Poedit 1.8.7\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: admin.php:83 admin.php:85 admin.php:105 admin.php:194
 msgid "分成比例列表"
-msgstr ""
+msgstr "分成比例列表"
 
 #: admin.php:90 admin.php:102 admin.php:104
 msgid "添加分成比例"
-msgstr ""
+msgstr "添加分成比例"
 
 #: admin.php:109 admin.php:181
 msgid "最多可以设5个级别！"
-msgstr ""
+msgstr "最多可以設5個級別！"
 
 #: admin.php:127 admin.php:217 admin.php:289
 msgid "请输入积分分成百分比"
-msgstr ""
+msgstr "請輸入積分分成百分比"
 
 #: admin.php:132 admin.php:135 admin.php:222 admin.php:225 admin.php:294
 #: admin.php:297
 msgid "积分分成百分比格式不正确，应为数字类型"
-msgstr ""
+msgstr "積分分成百分比格式不正確，應為數字類型"
 
 #: admin.php:140 admin.php:230 admin.php:336
 msgid "请输入现金分成百分比"
-msgstr ""
+msgstr "請輸入現金分成百分比"
 
 #: admin.php:145 admin.php:148 admin.php:235 admin.php:238 admin.php:341
 #: admin.php:344
 msgid "现金分成百分比格式不正确，应为数字类型"
-msgstr ""
+msgstr "現金分成百分比格式不正確，應為數字類型"
 
 #: admin.php:176 admin.php:271 admin.php:320 admin.php:394
 msgid "积分百分比为 "
-msgstr ""
+msgstr "積分百分比為 "
 
 #: admin.php:176 admin.php:271 admin.php:366 admin.php:394
 msgid "现金百分比为 "
-msgstr ""
+msgstr "現金百分比為 "
 
 #: admin.php:178
 msgid "添加成功"
-msgstr ""
+msgstr "添加成功"
 
 #: admin.php:191 admin.php:193
 msgid "编辑分成比例"
-msgstr ""
+msgstr "編輯分成比例"
 
 #: admin.php:273 admin.php:321 admin.php:367 admin_config.php:201
 msgid "编辑成功"
-msgstr ""
+msgstr "編輯成功"
 
 #: admin.php:397
 msgid "删除成功"
-msgstr ""
+msgstr "刪除成功"
 
 #: admin_config.php:82 admin_config.php:84 admin_config.php:85
 #: admin_config.php:199
 msgid "推荐设置"
-msgstr ""
+msgstr "推薦設置"
 
 #: admin_config.php:86
 msgid "添加分成"
-msgstr ""
+msgstr "添加分成"
 
 #: admin_config.php:89
 msgid "小时"
-msgstr ""
+msgstr "小時"
 
 #: admin_config.php:90
 msgid "天"
-msgstr ""
+msgstr "天"
 
 #: admin_config.php:91
 msgid "周"
-msgstr ""
+msgstr "周"
 
 #: admin_separate.php:80 admin_separate.php:81
 #: apis/affiliate_admin_menu_api.class.php:60
 msgid "分成管理"
-msgstr ""
+msgstr "分成管理"
 
 #: admin_separate.php:92
 msgid "订单状态"
-msgstr ""
+msgstr "訂單狀態"
 
 #: admin_separate.php:93
 msgid "未确认"
-msgstr ""
+msgstr "未確認"
 
 #: admin_separate.php:94
 msgid "已确认"
-msgstr ""
+msgstr "已確認"
 
 #: admin_separate.php:95
 msgid "已取消"
-msgstr ""
+msgstr "已取消"
 
 #: admin_separate.php:96
 msgid "无效"
-msgstr ""
+msgstr "無效"
 
 #: admin_separate.php:97
 msgid "退货"
-msgstr ""
+msgstr "退貨"
 
 #: admin_separate.php:102
 msgid "操作状态"
-msgstr ""
+msgstr "操作狀態"
 
 #: admin_separate.php:103
 msgid "按操作状态查找:"
-msgstr ""
+msgstr "按操作狀態查找:"
 
 #: admin_separate.php:104
 msgid "全部"
-msgstr ""
+msgstr "全部"
 
 #: admin_separate.php:105
 msgid "等待处理"
-msgstr ""
+msgstr "等待處理"
 
 #: admin_separate.php:106
 msgid "已分成"
-msgstr ""
+msgstr "已分成"
 
 #: admin_separate.php:107
 msgid "取消分成"
-msgstr ""
+msgstr "取消分成"
 
 #: admin_separate.php:108
 msgid "已撤销"
-msgstr ""
+msgstr "已撤銷"
 
 #: admin_separate.php:113 admin_separate.php:115
 msgid "推荐注册分成"
-msgstr ""
+msgstr "推薦註冊分成"
 
 #: admin_separate.php:114 admin_separate.php:116
 msgid "推荐订单分成"
-msgstr ""
+msgstr "推薦訂單分成"
 
 #: admin_separate.php:156 apis/affiliate_invite_reward_api.class.php:83
 #: mobile.php:91 modules/invite/record_module.class.php:101
 msgid "积分"
-msgstr ""
+msgstr "積分"
 
 #: admin_separate.php:181 admin_separate.php:205
 msgid "订单号"
-msgstr ""
+msgstr "訂單號"
 
 #: admin_separate.php:181 admin_separate.php:205
 msgid "分成:金钱"
-msgstr ""
+msgstr "分成:金錢"
 
 #: admin_separate.php:218
 msgid "操作失败"
-msgstr ""
+msgstr "操作失敗"
 
 #: admin_separate.php:224 admin_separate.php:243 admin_separate.php:278
 msgid "订单号为 "
-msgstr ""
+msgstr "訂單號為 "
 
 #: admin_separate.php:227
 msgid "操作成功"
-msgstr ""
+msgstr "操作成功"
 
 #: admin_separate.php:246
 msgid "取消成功"
-msgstr ""
+msgstr "取消成功"
 
 #: admin_separate.php:271
 msgid "分成被管理员取消！"
-msgstr ""
+msgstr "分成被管理員取消！"
 
 #: admin_separate.php:281
 msgid "撤销成功"
-msgstr ""
+msgstr "撤銷成功"
 
 #: admin_separate.php:352
 msgid "用户ID %s ( %s ), 分成:金钱 %s 积分 %s"
-msgstr ""
+msgstr "用戶ID %s ( %s ), 分成:金錢 %s 積分 %s"
 
 #: apis/affiliate_admin_menu_api.class.php:56
 msgid "推荐管理"
-msgstr ""
+msgstr "推薦管理"
 
 #: apis/affiliate_admin_menu_api.class.php:59 classes/Helper.php:61
 msgid "分成比例"
-msgstr ""
+msgstr "分成比例"
 
 #: apis/affiliate_admin_purview_api.class.php:57
 msgid "推荐邀请设置"
-msgstr ""
+msgstr "推薦邀請設置"
 
 #: apis/affiliate_admin_purview_api.class.php:58
 msgid "分成比例管理"
-msgstr ""
+msgstr "分成比例管理"
 
 #: apis/affiliate_admin_purview_api.class.php:59
 msgid "分成比例更新"
-msgstr ""
+msgstr "分成比例更新"
 
 #: apis/affiliate_admin_purview_api.class.php:60
 msgid "分成比例删除"
-msgstr ""
+msgstr "分成比例刪除"
 
 #: apis/affiliate_admin_purview_api.class.php:62
 msgid "推荐分成管理"
-msgstr ""
+msgstr "推薦分成管理"
 
 #: apis/affiliate_admin_purview_api.class.php:63
 msgid "推荐分成更新"
-msgstr ""
+msgstr "推薦分成更新"
 
 #: apis/affiliate_invite_bind_api.class.php:62
 msgid "调用affiliate_invite_bind_api参数无效"
-msgstr ""
+msgstr "調用affiliate_invite_bind_api參數無效"
 
 #: apis/affiliate_invite_reward_api.class.php:64
 msgid "调用affiliate_invite_reward_api参数无效"
-msgstr ""
+msgstr "調用affiliate_invite_reward_api參數無效"
 
 #: apis/affiliate_invite_reward_api.class.php:93
 #: apis/affiliate_invite_reward_api.class.php:135
 msgid "邀请送"
-msgstr ""
+msgstr "邀請送"
 
 #: apis/affiliate_invite_reward_api.class.php:101
 #: apis/affiliate_invite_reward_api.class.php:142
 msgid "邀请送余额"
-msgstr ""
+msgstr "邀請送余額"
 
 #: apis/affiliate_user_invite_code_api.class.php:62
 msgid "调用affiliate_user_invite_code_api参数无效"
-msgstr ""
+msgstr "調用affiliate_user_invite_code_api參數無效"
 
 #: classes/Helper.php:60 configs/package.php:55
 msgid "推荐分成"
-msgstr ""
+msgstr "推薦分成"
 
 #: classes/Helper.php:62
 msgid "配置"
-msgstr ""
+msgstr "配置"
 
 #: classes/Helper.php:64
 msgid "执行"
-msgstr ""
+msgstr "執行"
 
 #: classes/Helper.php:65 configs/jslang.php:58
 msgid "取消"
-msgstr ""
+msgstr "取消"
 
 #: classes/Helper.php:66
 msgid "撤销"
-msgstr ""
+msgstr "撤銷"
 
 #: configs/jslang.php:57
 msgid "确定"
-msgstr ""
+msgstr "確定"
 
 #: configs/jslang.php:59
 msgid "填写的手机号码格式不正确"
-msgstr ""
+msgstr "填寫的手機號碼格式不正確"
 
 #: configs/package.php:56
 msgid ""
-"访问者点击某推荐人的网址后，在此时间段内注册、下单，均认为是该推荐人的所介绍"
-"的，进行奖励"
+"访问者点击某推荐人的网址后，在此时间段内注册、下单，均认为是该推荐人的"
+"所介绍的，进行奖励"
 msgstr ""
+"訪問者點擊某推薦人的網址後，在此時間段內註冊、下單，均認為是該推薦人的"
+"所介紹的，進行獎勵"
 
 #: mobile.php:56
 msgid "邀请好友注册得奖励"
-msgstr ""
+msgstr "邀請好友註冊得獎勵"
 
 #: mobile.php:67
 msgid "请输入您的电话并下载移动商城应用程序"
-msgstr ""
+msgstr "請輸入您的電話並下載移動商城應用程序"
 
 #: mobile.php:79
 msgid "请输入您的手机号并下载【%s】"
-msgstr ""
+msgstr "請輸入您的手機號並下載【%s】"
 
 #: mobile.php:88 modules/invite/record_module.class.php:95
 msgid "红包"
-msgstr ""
+msgstr "紅包"
 
 #: mobile.php:94 modules/invite/record_module.class.php:98
 msgid "现金"
-msgstr ""
+msgstr "現金"
 
 #: mobile.php:98
 msgid "，完成注册后，您将获得%s%s奖励"
-msgstr ""
+msgstr "，完成註冊後，您將獲得%s%s獎勵"
 
 #: mobile.php:101
 msgid "，完成注册首次下单后，您将获得%s%s奖励"
-msgstr ""
+msgstr "，完成註冊首次下單後，您將獲得%s%s獎勵"
 
 #: mobile.php:110
 msgid "%s为您推荐[%s]移动商城"
-msgstr ""
+msgstr "%s為您推薦[%s]移動商城"
 
 #: mobile.php:112
 msgid "%s向您推荐一款购物应用【%s】"
-msgstr ""
+msgstr "%s向您推薦一款購物應用【%s】"
 
 #: mobile.php:188 modules/affiliate/user/invite_module.class.php:97
 msgid "该手机号已注册！"
-msgstr ""
+msgstr "該手機號已註冊！"
 
 #: mobile.php:192 modules/affiliate/user/invite_module.class.php:125
 msgid "您已被邀请过，请勿重复提交！"
-msgstr ""
+msgstr "您已被邀請過，請勿重復提交！"
 
 #: mobile.php:195
 msgid "提交成功！"
-msgstr ""
+msgstr "提交成功！"
 
 #: modules/affiliate/order/detail_module.class.php:67
 #: modules/affiliate/order/records_module.class.php:70
 #: modules/affiliate/user/invite_module.class.php:63
 #: modules/invite/record_module.class.php:74
 msgid "参数无效"
-msgstr ""
+msgstr "參數無效"
 
 #: modules/affiliate/order/detail_module.class.php:77
 msgid "分成订单不存在"
-msgstr ""
+msgstr "分成訂單不存在"
 
 #: modules/affiliate/user/invite_module.class.php:78
 msgid "验证码已过期，请重新获取！"
-msgstr ""
+msgstr "驗證碼已過期，請重新獲取！"
 
 #: modules/affiliate/user/invite_module.class.php:83
 msgid "验证码错误，请重新填写！"
-msgstr ""
+msgstr "驗證碼錯誤，請重新填寫！"
 
 #: modules/affiliate/user/invite_module.class.php:89
 msgid "信息错误，请重新获取验证码"
-msgstr ""
+msgstr "信息錯誤，請重新獲取驗證碼"
 
 #: modules/affiliate/user/invite_module.class.php:145
 msgid "未开启推荐奖励！"
-msgstr ""
+msgstr "未開啟推薦獎勵！"
 
 #: modules/invite/record_module.class.php:65
 msgid "当前账号已申请注销，不可查看此数据！"
-msgstr ""
+msgstr "當前賬號已申請註銷，不可查看此數據！"
 
 #: modules/invite/record_module.class.php:106
 msgid "邀请%s成功，奖励%s"
-msgstr ""
+msgstr "邀請%s成功，獎勵%s"
 
 #: content/apps/affiliate/templates/admin/affiliate_list.dwt.php:25
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:13
 msgid "推荐设置已关闭"
-msgstr ""
+msgstr "推薦設置已關閉"
 
 #: content/apps/affiliate/templates/admin/affiliate_list.dwt.php:34
 msgid "推荐人级别"
-msgstr ""
+msgstr "推薦人級別"
 
 #: content/apps/affiliate/templates/admin/affiliate_list.dwt.php:35
 msgid "积分分成百分比"
-msgstr ""
+msgstr "積分分成百分比"
 
 #: content/apps/affiliate/templates/admin/affiliate_list.dwt.php:36
 msgid "现金分成百分比"
-msgstr ""
+msgstr "现金分成百分比"
 
 #: content/apps/affiliate/templates/admin/affiliate_list.dwt.php:37
 #: content/apps/affiliate/templates/admin/affiliate_ck_list.dwt.php:45
 msgid "操作"
-msgstr ""
+msgstr "操作"
 
 #: content/apps/affiliate/templates/admin/affiliate_list.dwt.php:45
 msgid "编辑积分分成百分比"
-msgstr ""
+msgstr "編輯積分分成百分比"
 
 #: content/apps/affiliate/templates/admin/affiliate_list.dwt.php:48
 msgid "编辑现金分成百分比"
-msgstr ""
+msgstr "編輯現金分成百分比"
 
 #: content/apps/affiliate/templates/admin/affiliate_list.dwt.php:51
 msgid "编辑"
-msgstr ""
+msgstr "編輯"
 
 #: content/apps/affiliate/templates/admin/affiliate_list.dwt.php:52
 msgid "您确定要删除吗？"
-msgstr ""
+msgstr "您確定要刪除嗎？"
 
 #: content/apps/affiliate/templates/admin/affiliate_list.dwt.php:52
 msgid "删除"
-msgstr ""
+msgstr "刪除"
 
 #: content/apps/affiliate/templates/admin/affiliate_list.dwt.php:57
 #: content/apps/affiliate/templates/admin/affiliate_ck_list.dwt.php:68
 msgid "没有找到任何记录"
-msgstr ""
+msgstr "沒有找到任何記錄"
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:22
 msgid "推荐基本设置"
-msgstr ""
+msgstr "推薦基本設置"
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:24
 msgid "是否开启奖励："
-msgstr ""
+msgstr "是否開啟獎勵："
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:27
 msgid "开启"
-msgstr ""
+msgstr "開啟"
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:29
 msgid "关闭"
-msgstr ""
+msgstr "關閉"
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:31
 msgid "只控制奖励是否发放，关闭奖励时注意修改邀请分享说明。"
-msgstr ""
+msgstr "只控制獎勵是否發放，關閉獎勵時註意修改邀請分享說明。"
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:35
 msgid "推荐分成类型："
-msgstr ""
+msgstr "推薦分成類型："
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:45
 msgid "推荐时效："
-msgstr ""
+msgstr "推薦時效："
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:53
 msgid ""
-"访问者点击某推荐人的网址后，在此时间段内注册、下单，均认为是该推荐人的所介绍"
-"的。"
+"访问者点击某推荐人的网址后，在此时间段内注册、下单，均认为是该推荐人的"
+"所介绍的。"
 msgstr ""
+"訪問者點擊某推薦人的網址後，在此時間段內註冊、下單，均認為是該推薦人的"
+"所介紹的。"
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:58
 msgid "积分分成总额百分比："
-msgstr ""
+msgstr "積分分成總額百分比："
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:61
 msgid "订单积分的此百分比部分作为分成用积分。"
-msgstr ""
+msgstr "訂單積分的此百分比部分作為分成用積分。"
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:66
 msgid "现金分成总额百分比："
-msgstr ""
+msgstr "現金分成總額百分比："
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:69
 msgid "订单金额的此百分比部分作为分成用金额。"
-msgstr ""
+msgstr "訂單金額的此百分比部分作為分成用金額。"
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:74
 msgid "注册积分分成数："
-msgstr ""
+msgstr "註冊積分分成數："
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:77
 msgid "介绍会员注册，介绍人所能获得的成长值。"
-msgstr ""
+msgstr "介紹會員註冊，介紹人所能獲得的成長值。"
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:82
 msgid "成长值分成上限："
-msgstr ""
+msgstr "成長值分成上限："
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:85
 msgid "成长值到此上限则不再奖励介绍注册积分。"
-msgstr ""
+msgstr "成長值到此上限則不再獎勵介紹註冊積分。"
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:90
 msgid "推荐邀请分享内容："
-msgstr ""
+msgstr "推薦邀請分享內容："
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:97
 msgid "推荐邀请分享说明："
-msgstr ""
+msgstr "推薦邀請分享說明："
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:104
 msgid "被邀请分享说明设置："
-msgstr ""
+msgstr "被邀請分享說明設置："
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:110
 msgid "邀请人奖励设置"
-msgstr ""
+msgstr "邀請人獎勵設置"
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:112
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:158
 msgid "奖励发放时间："
-msgstr ""
+msgstr "獎勵發放時間："
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:115
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:161
 msgid "首次下单成交后"
-msgstr ""
+msgstr "首次下單成交後"
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:117
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:163
 msgid "注册时"
-msgstr ""
+msgstr "註冊時"
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:121
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:167
 msgid "奖励方式："
-msgstr ""
+msgstr "獎勵方式："
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:132
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:178
 msgid "选择奖励的红包："
-msgstr ""
+msgstr "選擇獎勵的紅包："
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:135
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:181
 msgid "请选择"
-msgstr ""
+msgstr "請選擇"
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:143
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:189
 msgid "奖励积分数量："
-msgstr ""
+msgstr "獎勵積分數量："
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:149
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:195
 msgid "奖励现金数量："
-msgstr ""
+msgstr "獎勵現金數量："
 
 #: content/apps/affiliate/templates/admin/affiliate_config.dwt.php:156
 msgid "受邀人奖励设置"
-msgstr ""
+msgstr "受邀人獎勵設置"
 
 #: content/apps/affiliate/templates/admin/affiliate_ck_list.dwt.php:26
 msgid "筛选"
-msgstr ""
+msgstr "篩選"
 
 #: content/apps/affiliate/templates/admin/affiliate_ck_list.dwt.php:29
 msgid "请输入订单号"
-msgstr ""
+msgstr "請輸入訂單號"
 
 #: content/apps/affiliate/templates/admin/affiliate_ck_list.dwt.php:30
 msgid "搜索"
-msgstr ""
+msgstr "搜索"
 
 #: content/apps/affiliate/templates/admin/affiliate_ck_list.dwt.php:43
 msgid "操作信息"
-msgstr ""
+msgstr "操作信息"
 
 #: content/apps/affiliate/templates/admin/affiliate_ck_list.dwt.php:44
 msgid "分成类型"
-msgstr ""
+msgstr "分成類型"
 
 #: content/apps/affiliate/templates/admin/affiliate_ck_list.dwt.php:58
 msgid "您确定要分成吗？"
-msgstr ""
+msgstr "您確定要分成嗎？"
 
 #: content/apps/affiliate/templates/admin/affiliate_ck_list.dwt.php:58
 msgid "分成"
-msgstr ""
+msgstr "分成"
 
 #: content/apps/affiliate/templates/admin/affiliate_ck_list.dwt.php:59
 msgid "您确定要取消分成吗？此操作不能撤销。"
-msgstr ""
+msgstr "您確定要取消分成嗎？此操作不能撤銷。"
 
 #: content/apps/affiliate/templates/admin/affiliate_ck_list.dwt.php:61
 msgid "您确定要撤销此次分成吗？"
-msgstr ""
+msgstr "您確定要撤銷此次分成嗎？"
 
 #: content/apps/affiliate/templates/admin/affiliate_info.dwt.php:27
 msgid "推荐人级别："
-msgstr ""
+msgstr "推薦人級別："
 
 #: content/apps/affiliate/templates/admin/affiliate_info.dwt.php:33
 msgid "积分分成百分比："
-msgstr ""
+msgstr "積分分成百分比："
 
 #: content/apps/affiliate/templates/admin/affiliate_info.dwt.php:40
 msgid "现金分成百分比："
-msgstr ""
+msgstr "現金分成百分比："
 
 #: content/apps/affiliate/templates/front/affiliate.dwt.php:25
 msgid "请输入您的手机号"
-msgstr ""
+msgstr "請輸入您的手機號"
 
 #: content/apps/affiliate/templates/front/affiliate.dwt.php:27
 msgid "下载应用程序"
-msgstr ""
+msgstr "下載應用程序"
