--- a/content/apps/captcha/languages/zh_TW/captcha.po
+++ b/content/apps/captcha/languages/zh_TW/captcha.po
@@ -2,163 +2,172 @@
 # This file is distributed under the same license as the Ecjia App captcha package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Ecjia App captcha 1.28.0\n"
+"Project-Id-Version: Ecjia App captcha 1.27.4\n"
 "Report-Msgid-Bugs-To: https://make.ecjia.com/polyglots/\n"
-"POT-Creation-Date: 2019-03-13 05:24:22+00:00\n"
+"POT-Creation-Date: 2019-03-13 13:57+0800\n"
+"PO-Revision-Date: 2019-03-13 13:58+0800\n"
+"Last-Translator: \n"
+"Language-Team: LANGUAGE <ecjia@ecjia.com>\n"
+"Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2019-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <ecjia@ecjia.com>\n"
+"X-Generator: Poedit 1.8.7\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: admin.php:80 admin.php:81 apis/captcha_setting_menu_api.class.php:56
 msgid "验证码设置"
-msgstr ""
+msgstr "驗證碼設置"
 
 #: admin.php:84 configs/jslang.php:66
 msgid "请输入验证码图片宽度！"
-msgstr ""
+msgstr "請輸入驗證碼圖片寬度！"
 
 #: admin.php:85 configs/jslang.php:67
 msgid "验证码图片宽度不能小于40！"
-msgstr ""
+msgstr "驗證碼圖片寬度不能小於40！"
 
 #: admin.php:86 configs/jslang.php:68
 msgid "验证码图片宽度不能大于145！"
-msgstr ""
+msgstr "驗證碼圖片寬度不能大於145！"
 
 #: admin.php:87 configs/jslang.php:69
 msgid "请输入验证码图片高度！"
-msgstr ""
+msgstr "請輸入驗證碼圖片高度！"
 
 #: admin.php:88 configs/jslang.php:70
 msgid "验证码图片高度不能小于15！"
-msgstr ""
+msgstr "驗證碼圖片高度不能小於15！"
 
 #: admin.php:89 configs/jslang.php:71
 msgid "验证码图片高度不能大于50！"
-msgstr ""
+msgstr "驗證碼圖片高度不能大於50！"
 
 #: admin.php:90 configs/jslang.php:72
 msgid "您确定要更换验证码样式吗？"
-msgstr ""
+msgstr "您確定要更換驗證碼樣式嗎？"
 
 #: admin.php:91 configs/jslang.php:73
 msgid "您已选中此验证码样式！"
-msgstr ""
+msgstr "您已選中此驗證碼樣式！"
 
 #: admin.php:92 configs/jslang.php:74
 msgid "确定"
-msgstr ""
+msgstr "確定"
 
 #: admin.php:93 configs/jslang.php:75
 msgid "取消"
-msgstr ""
+msgstr "取消"
 
 #: admin.php:143
 msgid "开启验证码需要服务GD库支持，而您的服务器不支持GD。"
-msgstr ""
+msgstr "開啟驗證碼需要服務GD庫支持，而您的服務器不支持GD。"
 
 #: admin.php:163 admin.php:180 classes/hooks/merchant_captcha.class.php:62
 #: configs/package.php:55
 msgid "验证码"
-msgstr ""
+msgstr "驗證碼"
 
 #: admin.php:164
 msgid "修改验证码参数"
-msgstr ""
+msgstr "修改驗證碼參數"
 
 #: admin.php:166
 msgid "设置保存成功"
-msgstr ""
+msgstr "設置保存成功"
 
 #: admin.php:183
 msgid "启用验证码样式成功。"
-msgstr ""
+msgstr "啟用驗證碼樣式成功。"
 
 #: admin.php:185
 msgid "启用验证码样式失败。"
-msgstr ""
+msgstr "啟用驗證碼樣式失敗。"
 
 #: admin_captcha.php:67 index.php:67 merchant_captcha.php:67
 msgid "验证码错误！"
-msgstr ""
+msgstr "驗證碼錯誤！"
 
 #: admin_captcha.php:69 index.php:69 merchant_captcha.php:69
 msgid "验证码正确！"
-msgstr ""
+msgstr "驗證碼正確！"
 
 #: classes/Enums/CaptchaEnum.php:29
 msgid "注册时使用验证码"
-msgstr ""
+msgstr "註冊時使用驗證碼"
 
 #: classes/Enums/CaptchaEnum.php:30
 msgid "登录时使用验证码"
-msgstr ""
+msgstr "登錄時使用驗證碼"
 
 #: classes/Enums/CaptchaEnum.php:31
 msgid "评论时使用验证码"
-msgstr ""
+msgstr "評論時使用驗證碼"
 
 #: classes/Enums/CaptchaEnum.php:32
 msgid "后台登录时使用验证码"
-msgstr ""
+msgstr "後台登錄時使用驗證碼"
 
 #: classes/Enums/CaptchaEnum.php:33
 msgid "登录失败后显示验证码"
-msgstr ""
+msgstr "登錄失敗後顯示驗證碼"
 
 #: classes/Enums/CaptchaEnum.php:34
 msgid "留言时使用验证码"
-msgstr ""
+msgstr "留言時使用驗證碼"
 
 #: classes/hooks/admin_captcha.class.php:61
 #: classes/hooks/merchant_captcha.class.php:61
 #: classes/hooks/merchant_captcha.class.php:160
 msgid "看不清？点击更换另一个验证码。"
-msgstr ""
+msgstr "看不清？點擊更換另一個驗證碼。"
 
 #: classes/hooks/admin_captcha.class.php:62
 msgid "验证码："
-msgstr ""
+msgstr "驗證碼："
 
 #: classes/hooks/admin_captcha.class.php:147
 #: classes/hooks/merchant_captcha.class.php:141
 msgid "您输入的验证码不正确。"
-msgstr ""
+msgstr "您輸入的驗證碼不正確。"
 
 #: classes/hooks/merchant_captcha.class.php:161
 msgid "请输入图形验证码"
-msgstr ""
+msgstr "請輸入圖形驗證碼"
 
 #: configs/jslang.php:57
-msgid "启用新的验证码样式将覆盖原来的样式。<br />您确定要启用选定的样式吗？"
+msgid ""
+"启用新的验证码样式将覆盖原来的样式。<br />您确定要启用选定的样式吗？"
 msgstr ""
+"啟用新的驗證碼樣式將覆蓋原來的樣式。<br />您確定要啟用選定的樣式嗎？"
 
 #: configs/jslang.php:58
 msgid "图片宽度请输入数字!"
-msgstr ""
+msgstr "圖片寬度請輸入數字!"
 
 #: configs/jslang.php:59
 msgid "图片宽度要在40到145之间!"
-msgstr ""
+msgstr "圖片寬度要在40到145之間!"
 
 #: configs/jslang.php:60
 msgid "图片高度请输入数字!"
-msgstr ""
+msgstr "圖片高度請輸入數字!"
 
 #: configs/jslang.php:61
 msgid "图片高度要在15到50之间!"
-msgstr ""
+msgstr "圖片高度要在15到50之間!"
 
 #: configs/package.php:56
 msgid ""
-"验证码插件核心功能为“防止恶意破解密码、刷票、论坛灌水、刷页”等，为用户账户安"
-"全带来一定防护作用。在插件使用过程中，您可以添加多个不同验证码且可以实时点击"
-"预览效果；并选用您需要使用的验证码；您可以自定义验证码的宽度、高度及验证码使"
-"用范围、机制等。"
+"验证码插件核心功能为“防止恶意破解密码、刷票、论坛灌水、刷页”等，为用户账"
+"户安全带来一定防护作用。在插件使用过程中，您可以添加多个不同验证码且可以"
+"实时点击预览效果；并选用您需要使用的验证码；您可以自定义验证码的宽度、高"
+"度及验证码使用范围、机制等。"
 msgstr ""
+"驗證碼插件核心功能為“防止惡意破解密碼、刷票、論壇灌水、刷頁”等，為用戶賬"
+"戶安全帶來一定防護作用。在插件使用過程中，您可以添加多個不同驗證碼且可以"
+"實時點擊預覽效果；並選用您需要使用的驗證碼；您可以自定義驗證碼的寬度、高"
+"度及驗證碼使用範圍、機制等。"
 
 #: modules/admin/shop/captcha/mail_module.class.php:57
 #: modules/admin/shop/captcha/sms/checkcode_module.class.php:61
@@ -167,136 +176,140 @@ msgstr ""
 #: modules/shop/captcha/sms/checkcode_module.class.php:65
 #: modules/shop/captcha/sms_module.class.php:57
 msgid "参数无效"
-msgstr ""
+msgstr "參數無效"
 
 #: modules/admin/shop/captcha/mail_module.class.php:64
 #: modules/shop/captcha/mail_module.class.php:64
 msgid "邮箱账号格式错误"
-msgstr ""
+msgstr "郵箱賬號格式錯誤"
 
 #: modules/admin/shop/captcha/mail_module.class.php:67
 #: modules/admin/shop/captcha/sms_module.class.php:70
 #: modules/shop/captcha/mail_module.class.php:67
 #: modules/shop/captcha/sms_module.class.php:70
 msgid "发送频率过高，请一分钟后再试"
-msgstr ""
+msgstr "發送頻率過高，請一分鐘後再試"
 
 #: modules/admin/shop/captcha/mail_module.class.php:86
 msgid "请检查短信模板send_validate"
-msgstr ""
+msgstr "請檢查短信模板send_validate"
 
 #: modules/admin/shop/captcha/mail_module.class.php:99
 #: modules/shop/captcha/mail_module.class.php:104
 msgid "验证码发送成功！"
-msgstr ""
+msgstr "驗證碼發送成功！"
 
 #: modules/admin/shop/captcha/mail_module.class.php:101
 #: modules/shop/captcha/mail_module.class.php:106
 msgid "验证码发送失败！"
-msgstr ""
+msgstr "驗證碼發送失敗！"
 
 #: modules/admin/shop/captcha/sms/checkcode_module.class.php:77
 msgid "验证码错误"
-msgstr ""
+msgstr "驗證碼錯誤"
 
 #: modules/admin/shop/captcha/sms/checkcode_module.class.php:100
 #: modules/admin/shop/captcha/sms_module.class.php:101
 #: modules/shop/captcha/sms_module.class.php:102
 msgid "短信发送失败！"
-msgstr ""
+msgstr "短信發送失敗！"
 
 #: modules/shop/captcha/mail_module.class.php:86
 msgid "请检查邮件模板send_validate"
-msgstr ""
+msgstr "請檢查郵件模板send_validate"
 
 #: modules/shop/captcha/sms/checkcode_module.class.php:70
 msgid "验证码已过期，请重新获取！"
-msgstr ""
+msgstr "驗證碼已過期，請重新獲取！"
 
 #: modules/shop/captcha/sms/checkcode_module.class.php:74
 msgid "验证码错误，请重新填写！"
-msgstr ""
+msgstr "驗證碼錯誤，請重新填寫！"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:18
 msgid "启用验证码"
-msgstr ""
+msgstr "啟用驗證碼"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:19
 msgid ""
-"图片验证码可以避免恶意批量评论或提交信息，推荐打开验证码功能。注意: 启用验证"
-"码会使得部分操作变得繁琐，建议仅在必需时打开"
+"图片验证码可以避免恶意批量评论或提交信息，推荐打开验证码功能。注意: 启用"
+"验证码会使得部分操作变得繁琐，建议仅在必需时打开"
 msgstr ""
+"圖片驗證碼可以避免惡意批量評論或提交信息，推薦打開驗證碼功能。註意: 啟用"
+"驗證碼會使得部分操作變得繁瑣，建議僅在必需時打開"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:21
 msgid "新用户注册"
-msgstr ""
+msgstr "新用戶註冊"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:22
 msgid "用户登录"
-msgstr ""
+msgstr "用戶登錄"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:23
 msgid "发表评论"
-msgstr ""
+msgstr "發表評論"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:24
 msgid "后台管理员登录"
-msgstr ""
+msgstr "後臺管理員登錄"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:25
 msgid "留言板留言"
-msgstr ""
+msgstr "留言板留言"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:30
 msgid "登录失败时显示验证码"
-msgstr ""
+msgstr "登錄失敗時顯示驗證碼"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:31
 msgid ""
-"选择“是”将在用户登录失败 3 次后才显示验证码，选择“否”将始终在登录时显示验证"
-"码。注意: 只有在启用了用户登录验证码时本设置才有效"
+"选择“是”将在用户登录失败 3 次后才显示验证码，选择“否”将始终在登录时显示"
+"验证码。注意: 只有在启用了用户登录验证码时本设置才有效"
 msgstr ""
+"選擇“是”將在用戶登錄失敗 3 次後才顯示驗證碼，選擇“否”將始終在登錄時顯示"
+"驗證碼。註意: 只有在啟用了用戶登錄驗證碼時本設置才有效"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:33
 msgid "是"
-msgstr ""
+msgstr "是"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:34
 msgid "否"
-msgstr ""
+msgstr "否"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:39
 msgid "验证码图片宽度"
-msgstr ""
+msgstr "驗證碼圖片寬度"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:40
 msgid "验证码图片的宽度，范围在 40～145 之间"
-msgstr ""
+msgstr "驗證碼圖片的寬度，範圍在 40～145 之間"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:47
 msgid "验证码图片高度"
-msgstr ""
+msgstr "驗證碼圖片高度"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:48
 msgid "验证码图片的高度，范围在 15～50 之间"
-msgstr ""
+msgstr "驗證碼圖片的高度，範圍在 15～50 之間"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:56
 msgid "保存设置"
-msgstr ""
+msgstr "保存設置"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:60
 msgid "可用验证码样式"
-msgstr ""
+msgstr "可用驗證碼樣式"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:66
 msgid "当前样式"
-msgstr ""
+msgstr "當前樣式"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:77
 msgid "启用此验证码"
-msgstr ""
+msgstr "啟用此驗證碼"
 
 #: content/apps/captcha/templates/admin/captcha_list.dwt.php:84
 msgid "添加验证码"
-msgstr ""
+msgstr "添加驗證碼"
