--- a/content/apps/connect/languages/zh_TW/connect.po
+++ b/content/apps/connect/languages/zh_TW/connect.po
@@ -2,87 +2,89 @@
 # This file is distributed under the same license as the Ecjia App connect package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Ecjia App connect 1.28.0\n"
+"Project-Id-Version: Ecjia App connect 1.27.4\n"
 "Report-Msgid-Bugs-To: https://make.ecjia.com/polyglots/\n"
-"POT-Creation-Date: 2019-03-15 01:49:03+00:00\n"
+"POT-Creation-Date: 2019-03-13 14:05+0800\n"
+"PO-Revision-Date: 2019-03-13 14:05+0800\n"
+"Last-Translator: \n"
+"Language-Team: ecjia@ecjia.com\n"
+"Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2019-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <ecjia@ecjia.com>\n"
+"X-Generator: Poedit 1.8.7\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: admin_plugin.php:75 admin_plugin.php:89
 #: apis/connect_admin_purview_api.class.php:57
 #: apis/connect_plugin_menu_api.class.php:56
 #: classes/hooks/admin_connect.class.php:52
 msgid "账号连接"
-msgstr ""
+msgstr "账号连接"
 
 #: admin_plugin.php:90 admin_plugin.php:106
 msgid "账号连接列表"
-msgstr ""
+msgstr "賬號連接列表"
 
 #: admin_plugin.php:104 admin_plugin.php:105
 #: apis/connect_admin_purview_api.class.php:58
 msgid "编辑账号连接"
-msgstr ""
+msgstr "編輯賬號連接"
 
 #: admin_plugin.php:111 modules/connect/bind_module.class.php:79
-#: modules/connect/signin_module.class.php:70
-#: modules/connect/signin_module.class.php:162
+#: modules/connect/signin_module.class.php:66
 #: modules/connect/signup_module.class.php:66
 #: modules/connect/signup_module.class.php:70
 msgid "参数错误"
-msgstr ""
+msgstr "參數錯誤"
 
 #: admin_plugin.php:117
 msgid "连接方式不存在"
-msgstr ""
+msgstr "連接方式不存在"
 
 #: admin_plugin.php:158 admin_plugin.php:229
 msgid "该名称已存在！"
-msgstr ""
+msgstr "該名稱已存在！"
 
 #: admin_plugin.php:185
 msgid "编辑成功！"
-msgstr ""
+msgstr "編輯成功！"
 
-#: admin_plugin.php:210 callback.php:70 callback.php:110 index.php:61
+#: admin_plugin.php:210 callback.php:65 callback.php:105 index.php:61
 msgid "返回上一页"
-msgstr ""
+msgstr "返回上壹頁"
 
 #: admin_plugin.php:225
 msgid "名称不能为空"
-msgstr ""
+msgstr "名稱不能為空"
 
 #: admin_plugin.php:232
 msgid "编辑名称成功！"
-msgstr ""
+msgstr "編輯名稱成功！"
 
 #: admin_plugin.php:244
 msgid "请输入合法数字！"
-msgstr ""
+msgstr "請輸入合法數字！"
 
 #: admin_plugin.php:249
 msgid "快速编辑排序操作成功！"
-msgstr ""
+msgstr "快速編輯排序操作成功！"
 
 #: admin_plugin.php:265
 msgid "禁用操作成功"
-msgstr ""
+msgstr "禁用操作成功"
 
 #: admin_plugin.php:281
 msgid "启用操作成功"
-msgstr ""
+msgstr "啟用操作成功"
 
 #: apis/connect_admin_purview_api.class.php:59
 msgid "启用账号连接"
-msgstr ""
+msgstr "啟用賬號連接"
 
 #: apis/connect_admin_purview_api.class.php:60
 msgid "禁用账号连接"
-msgstr ""
+msgstr "禁用賬號連接"
 
 #: apis/connect_connect_user_api.class.php:65
 #: apis/connect_connect_user_bind_api.class.php:70
@@ -93,200 +95,207 @@ msgstr ""
 #: apis/connect_user_remove_cleardata_api.class.php:63
 #: modules/connect/unbind_module.class.php:65
 msgid "参数无效"
-msgstr ""
+msgstr "參數無效"
 
-#: apis/connect_connect_user_bind_api.class.php:145
-#: modules/connect/signin_module.class.php:145
-#: modules/connect/signin_module.class.php:214
+#: apis/connect_connect_user_bind_api.class.php:144
+#: modules/connect/signin_module.class.php:150
 msgid "请关联或注册一个会员用户！"
-msgstr ""
+msgstr "請關聯或註冊壹個會員用戶！"
 
-#: apis/connect_connect_user_bind_api.class.php:166
+#: apis/connect_connect_user_bind_api.class.php:165
 msgid "绑定用户失败"
-msgstr ""
+msgstr "綁定用戶失敗"
 
 #: apis/connect_plugin_install_api.class.php:75
 msgid "帐号登录平台名称或connect_code不能为空"
-msgstr ""
+msgstr "帳號登錄平臺名稱或connect_code不能為空"
 
 #: apis/connect_plugin_install_api.class.php:81
 msgid "帐号登录平台已存在"
-msgstr ""
+msgstr "帳號登錄平臺已存在"
 
 #: apis/connect_plugin_uninstall_api.class.php:74
 msgid "帐号登录平台名称不能为空"
-msgstr ""
+msgstr "帳號登錄平臺名稱不能為空"
 
 #: apis/connect_update_user_avatar_api.class.php:97
 msgid "下载头像图片失败"
-msgstr ""
+msgstr "下載頭像圖片失敗"
 
-#: callback.php:71 index.php:64
+#: callback.php:66 index.php:64
 msgid "未找到第三方登录插件"
-msgstr ""
+msgstr "未找到第三方登錄插件"
 
-#: callback.php:111
+#: callback.php:106
 msgid "模板文件%s未找到"
-msgstr ""
+msgstr "模板文件%s未找到"
 
 #: classes/Maintains/UpdateConnectPlatform.php:71
 msgid "更新第三方登录会员数据"
-msgstr ""
+msgstr "更新第三方登錄會員數據"
 
 #: classes/Maintains/UpdateConnectPlatform.php:72
 msgid ""
-"多平台使用同一登录插件后，为方便多端同步数据，增加connect_platform对接平台和"
-"union_id字段"
+"多平台使用同一登录插件后，为方便多端同步数据，增加connect_platform"
+"对接平台和union_id字段"
 msgstr ""
+"多平臺使用同壹登錄插件後，為方便多端同步數據，增加connect_platform"
+"對接平臺和union_id字段"
 
 #: classes/Maintains/UpdateConnectPlatform.php:109
 msgid ""
-"本次任务成功执行%s条数据，还剩下%s条数据未处理，请继续点击运行继续处理，直至"
-"完成。"
+"本次任务成功执行%s条数据，还剩下%s条数据未处理，请继续点击运行继续"
+"处理，直至完成。"
 msgstr ""
+"本次任務成功執行%s條數據，還剩下%s條數據未處理，請繼續點擊運行繼續"
+"處理，直至完成。"
 
 #: classes/Maintains/UpdateConnectPlatform.php:111
 msgid "本次任务成功执行%s条数据，还剩下%s条数据未处理。"
-msgstr ""
+msgstr "本次任務成功執行%s條數據，還剩下%s條數據未處理。"
 
 #: classes/UserCleanHandlers/UserConnectClear.php:37
 msgid "第三方账号关联"
-msgstr ""
+msgstr "第三方賬號關聯"
 
 #: classes/UserCleanHandlers/UserConnectClear.php:48
 msgid "暂无绑定"
-msgstr ""
+msgstr "暫無綁定"
 
 #: classes/UserCleanHandlers/UserConnectClear.php:51
 #: classes/UserCleanHandlers/UserConnectClear.php:54
 #: classes/UserCleanHandlers/UserConnectClear.php:57
 msgid "已关联"
-msgstr ""
+msgstr "已關聯"
 
 #: classes/UserCleanHandlers/UserConnectClear.php:52
 msgid "QQ、微信"
-msgstr ""
+msgstr "QQ、微信"
 
 #: classes/UserCleanHandlers/UserConnectClear.php:55
 msgid "QQ"
-msgstr ""
+msgstr "QQ"
 
 #: classes/UserCleanHandlers/UserConnectClear.php:58
 msgid "微信"
-msgstr ""
+msgstr "微信"
 
-#: classes/UserCleanHandlers/UserConnectClear.php:123
+#: classes/UserCleanHandlers/UserConnectClear.php:118
 msgid "用户名是"
-msgstr ""
+msgstr "用戶名是"
 
-#: classes/UserCleanHandlers/UserConnectClear.php:123
+#: classes/UserCleanHandlers/UserConnectClear.php:118
 msgid "用户ID是"
-msgstr ""
+msgstr "用戶ID是"
 
 #: classes/hooks/admin_connect.class.php:68 configs/package.php:55
 msgid "帐号连接"
-msgstr ""
+msgstr "帳號連接"
 
 #: configs/jslang.php:55
 msgid "请输入名称！"
-msgstr ""
+msgstr "請輸入名稱！"
 
 #: configs/jslang.php:56
 msgid "请输入描述！"
-msgstr ""
+msgstr "請輸入描述！"
 
 #: configs/package.php:56
 msgid "使用第三方帐号登录功能，第三方登录插件管理与控制。"
-msgstr ""
+msgstr "使用第三方帳號登錄功能，第三方登錄插件管理與控制。"
 
 #: modules/connect/bind_module.class.php:70
 #: modules/connect/signup_module.class.php:82
-#: modules/connect/unbind_module.class.php:130
+#: modules/connect/unbind_module.class.php:104
 msgid "验证码已过期，请重新获取！"
-msgstr ""
+msgstr "驗證碼已過期，請重新獲取！"
 
 #: modules/connect/bind_module.class.php:74
 #: modules/connect/signup_module.class.php:86
-#: modules/connect/unbind_module.class.php:134
+#: modules/connect/unbind_module.class.php:108
 msgid "验证码错误，请重新填写！"
-msgstr ""
+msgstr "驗證碼錯誤，請重新填寫！"
 
 #: modules/connect/bind_module.class.php:86
 #: modules/connect/bind_module.class.php:162
 #: modules/connect/signup_module.class.php:76
 msgid "您已绑定过会员用户！"
-msgstr ""
+msgstr "您已綁定過會員用戶！"
 
 #: modules/connect/bind_module.class.php:111
 #: modules/connect/bind_module.class.php:135
 msgid "用户重复，请与管理员联系！"
-msgstr ""
+msgstr "用戶重復，請與管理員聯系！"
 
 #: modules/connect/bind_module.class.php:125
 #: modules/connect/bind_module.class.php:154
 msgid "密码错误！"
-msgstr ""
+msgstr "密碼錯誤！"
 
-#: modules/connect/signin_module.class.php:129
+#: modules/connect/signin_module.class.php:128
 msgid "用户信息异常"
-msgstr ""
+msgstr "用戶信息異常"
 
 #: modules/connect/signup_module.class.php:104
 msgid "您的手机号已使用"
-msgstr ""
+msgstr "您的手機號已使用"
 
 #: modules/connect/signup_module.class.php:150
 msgid "注册送积分"
-msgstr ""
+msgstr "註冊送積分"
 
-#: modules/connect/unbind_module.class.php:139
+#: modules/connect/unbind_module.class.php:90
+msgid "关联账号解绑失败！"
+msgstr "關聯賬號解綁失敗！"
+
+#: modules/connect/unbind_module.class.php:113
 msgid "接受验证码手机号与用户绑定手机号不同！"
-msgstr ""
+msgstr "接受驗證碼手機號與用戶綁定手機號不同！"
 
 #: content/apps/connect/templates/admin/connect_edit.dwt.php:25
 msgid "名称："
-msgstr ""
+msgstr "名稱："
 
 #: content/apps/connect/templates/admin/connect_edit.dwt.php:33
 msgid "描述："
-msgstr ""
+msgstr "描述："
 
 #: content/apps/connect/templates/admin/connect_edit.dwt.php:66
 msgid "确定"
-msgstr ""
+msgstr "確定"
 
 #: content/apps/connect/templates/admin/connect_list.dwt.php:21
 msgid "名称"
-msgstr ""
+msgstr "名稱"
 
 #: content/apps/connect/templates/admin/connect_list.dwt.php:22
 msgid "描述"
-msgstr ""
+msgstr "描述"
 
 #: content/apps/connect/templates/admin/connect_list.dwt.php:23
 msgid "排序"
-msgstr ""
+msgstr "排序"
 
 #: content/apps/connect/templates/admin/connect_list.dwt.php:31
 msgid "编辑名称"
-msgstr ""
+msgstr "編輯名稱"
 
 #: content/apps/connect/templates/admin/connect_list.dwt.php:42
 msgid "编辑"
-msgstr ""
+msgstr "編輯"
 
 #: content/apps/connect/templates/admin/connect_list.dwt.php:44
 msgid "禁用"
-msgstr ""
+msgstr "禁用"
 
 #: content/apps/connect/templates/admin/connect_list.dwt.php:50
 msgid "启用"
-msgstr ""
+msgstr "啟用"
 
 #: content/apps/connect/templates/admin/connect_list.dwt.php:56
 msgid "编辑排序"
-msgstr ""
+msgstr "編輯排序"
 
 #: content/apps/connect/templates/admin/connect_list.dwt.php:63
 msgid "没有找到任何记录"
-msgstr ""
+msgstr "沒有找到任何記錄"
